<resources>
    <string name="app_name">jirakul-SizeBook</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="edit_date">yyyy-mm-dd</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_neck">Enter Neck circumference</string>
    <string name="edit_comment">Enter Comment</string>
    <string name="edit_bust">Enter bust size</string>
    <string name="edit_chest">Enter chest size</string>
    <string name="edit_waist">Enter waist size</string>
    <string name="edit_hip">Enter hip size</string>
    <string name="edit_inseam">Enter inseam</string>
    <string name="button_send">Enter</string>
    <string name="unit">inches</string>
    <string name="action_delete">Delete</string>
    <string name="n_a">Not specify</string>
</resources>
