<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:paddingTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:hint="@string/edit_name"/>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.jirakul_sizebook.DetailsActivity"
            android:background="@android:color/white"
            tools:showIn="@layout/activity_details">



            <LinearLayout
                android:id="@+id/date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    style="@style/HeadColor"
                    android:text="Date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    style="@style/HeadColor"
                    android:text="Neck"/>

                <TextView
                    android:id="@+id/bust_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    style="@style/HeadColor"
                    android:paddingRight="20dp"
                    android:text="Bust"/>

                <TextView
                    android:id="@+id/chest_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    style="@style/HeadColor"
                    android:text="Chest"/>

                <TextView
                    android:id="@+id/waist_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    style="@style/HeadColor"
                    android:text="Waist"/>

                <TextView
                    android:id="@+id/hip_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    style="@style/HeadColor"
                    android:text="Hip"/>

                <TextView
                    android:id="@+id/Inseam_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    style="@style/HeadColor"
                    android:text="Inseam" />

                <TextView
                    android:id="@+id/comment_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    style="@style/HeadColor"
                    android:text="Comment"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:id="@+id/edit_date"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:hint="@string/edit_date" />

                    <TextView android:id="@+id/edit_neck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textSize="20dp"
                        android:hint="@string/edit_neck"/>

                <TextView android:id="@+id/edit_bust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:hint="@string/edit_bust" />

                <TextView android:id="@+id/edit_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="20dp"
                    android:hint="@string/edit_chest" />

                <TextView android:id="@+id/edit_waist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="20dp"
                    android:hint="@string/edit_waist" />

                <TextView android:id="@+id/edit_hip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="20dp"
                    android:hint="@string/edit_hip" />

                <TextView android:id="@+id/edit_inseam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="20dp"
                    android:hint="@string/edit_inseam" />

                <TextView android:id="@+id/edit_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:paddingBottom="20dp"
                    android:hint="@string/edit_comment" />

            </LinearLayout>


        </LinearLayout>


    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"/>


</LinearLayout>

</ScrollView>


